--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-    <a-marker type="pattern" preset="custom" url="/Olfactory_AR/pattern-marker.patt">
+    <a-marker type="pattern" preset="custom" url="/Olfactory_ar/pattern-marker.patt">
         <a-box
                     position="0 0 -0"
                     scale="1.5 1.5 1.5"
                     rotation="-90 0 0"
                     crossorigin
-                    material="shader:gif;src:url(/Olfactory_AR/shade2.gif);" gif="" transparent="true" gif=""
+                    material="shader:gif;src:url(/Olfactory_ar/shade2.gif);" gif="" transparent="true" gif=""
 
 
                     >
