--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
     <a-marker type="pattern" preset="custom" url="/Olfactory_ar/pattern-marker.patt">
-        <a-box
+        <a-plane
                     position="0 0 -0"
                     scale="1 1 1"
                     rotation="-90 0 0"
+                    width="1" height="1"
                     crossorigin
                     material="shader:gif;src:url(/Olfactory_ar/shade2.gif);" gif="" transparent="true" gif=""
 
 
                     >
-                    </a-box>
+                    </a-plane>
         </a-marker>
         <a-entity camera></a-entity>
  </a-scene>
