--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
                     >
                     </a-plane>
+       <a-entity
+               position="0 0 -0"
+                    scale="1 1 1"
+                    rotation="0 0 0"
+                gltf-model="/Olfactory_ar/test4.glb"
+                ></a-entity>
+      
         </a-marker>
         <a-entity camera></a-entity>
  </a-scene>
