--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-    <a-marker type="pattern" preset="custom" url="/Olfactory_ar/pattern-marker.patt">
+    <a-marker type="pattern" preset="custom" url="/Olfactory_ar/marker.patt">
         <a-plane
                     position="0 0 -0"
                     scale="1 1 1"
@@ -22,7 +22,7 @@
                     >
                     </a-plane>
        <a-entity
-               position="0 2 -0.5"
+               position="0 0 -0"
                     scale="0.2 0.2 0.2"
                     rotation="-90 0 0"
                 gltf-model="/Olfactory_ar/test7.glb"
